tests/build/cases/widget_new/not_allowed_in_when2.stderr
error[E0599]: no method named `allowed_in_when_assign` found for struct `foo_` in the current scope
  --> cases/widget_new/not_allowed_in_when2.rs:19:13
   |
11 |   #[property(CONTEXT)]
   |   -------------------- method `allowed_in_when_assign` not found for this struct
...
19 |       let _ = Wgt! {
   |  _____________^
20 | |         foo = false;
21 | |         margin = 0;
22 | |
...  |
26 | |         }
27 | |     };
   | |_____^ help: there is a method with a similar name: `allowed_in_when_expr`
   |
   = note: this error originates in the macro `zero_ui::__proc_macro_util::widget::widget_new` which comes from the expansion of the macro `Wgt` (in Nightly builds, run with -Z macro-backtrace for more info)
